--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "prettier --write ."
+    "lint": "prettier --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "axios": "^0.21.4",
     "next": "^12.0.7",
+    "prettier": "^3.2.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "prettier": "^3.2.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "@types/node": "20.11.16",
     "@types/react": "18.2.53",
+    "husky": "^9.0.10",
     "typescript": "5.3.3"
   }
 }
