--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "20.11.16",
     "@types/react": "18.2.53",
     "husky": "^9.0.10",
+    "sass": "^1.70.0",
     "typescript": "5.3.3"
   }
 }
