--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,31 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    // "plugin:@typescript-eslint/recommended",
+    "plugin:react/jsx-runtime",
+    "prettier"
+  ],
   "parser": "@typescript-eslint/parser",
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "plugins": ["@typescript-eslint"],
+  "parserOptions": {
+    // "ecmaFeatures": {
+    //     "jsx": true
+    // },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
   "rules": {
-    "indent": ["error", 2],
-    "semi": ["error", "always"],
-    "quotes": ["error", "single"]
-    // 其他规则可以根据您的需求添加
+    "indent": ["warn", "tab"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"]
+    // "react/display-name": "off",
+    // "react/jsx-no-target-blank": "off",
+    // "react/no-direct-mutation-state": "off",
+    // "react/prop-types": "off"
   }
 }
