--- a/package.json
+++ b/package.json
@@ -7,20 +7,29 @@
     "build": "next build",
     "start": "next start",
     "lint": "prettier --write .",
-    "prepare": "husky"
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "axios": "^0.21.4",
     "next": "^12.0.7",
-    "prettier": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "20.11.16",
     "@types/react": "18.2.53",
+    "@typescript-eslint/eslint-plugin": "6.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^9.0.10",
+    "lint-staged": "12.3.7",
+    "prettier": "^3.2.5",
     "sass": "^1.70.0",
+    "shell-quote": "1.7.3",
     "typescript": "5.3.3"
   }
 }
